--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "git@github.com:clustree/scroll.git",
   "author": "Clustree",
   "license": "MIT",
+  "source": "src/index.js",
   "peerDependencies": {
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
@@ -28,21 +29,18 @@
   "scripts": {
     "prepare": "yarn run build",
     "pre-build": "rimraf lib",
-    "build": "yarn build:js && yarn build:css",
-    "build:css": "sass src/styles.scss lib/index.css",
-    "build:js": "BABEL_ENV=production rollup -c",
+    "build": "microbundle --css-modules false --jsx React.createElement",
+    "dev": "microbundle watch --css-modules false --jsx React.createElement",
     "website:build": "cd website && PUBLIC_URL='//clustree.github.io/scroll' yarn build",
     "website:deploy": "gh-pages -d website/build"
   },
   "devDependencies": {
-    "babel-preset-react-app": "^9.0.1",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.3",
     "lint-staged": "^9.2.1",
+    "microbundle": "^0.12.0",
     "prettier": "^1.18.1",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.19.4",
-    "rollup-plugin-babel": "^4.3.3",
-    "sass": "^1.22.9"
+    "rimraf": "^3.0.2",
+    "sass": "^1.26.5"
   }
 }
