--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "license": "MIT",
   "source": "src/index.js",
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0"
   },
   "lint-staged": {
     "src/**": [
