--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "repository": "git@github.com:clustree/scroll.git",
   "author": "Clustree",
   "license": "MIT",
-  "source": "src/index.js",
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0"
@@ -17,6 +16,9 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "mangle": {
+    "regex": "^_"
   },
   "husky": {
     "hooks": {
@@ -28,13 +30,14 @@
   ],
   "scripts": {
     "prepare": "yarn run build",
-    "pre-build": "rimraf lib",
-    "build": "microbundle --css-modules false --jsx React.createElement",
-    "dev": "microbundle watch --css-modules false --jsx React.createElement",
+    "prebuild": "rimraf lib",
+    "build": "microbundle --css-modules false --jsx React.createElement --strict",
+    "dev": "yarn build -w",
     "website:build": "cd website && PUBLIC_URL='//clustree.github.io/scroll' yarn build",
     "website:deploy": "gh-pages -d website/build"
   },
   "devDependencies": {
+    "@types/react": "^17.0.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.3",
     "lint-staged": "^9.2.1",
@@ -42,5 +45,6 @@
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "sass": "^1.30.0"
-  }
+  },
+  "dependencies": {}
 }
