--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A React custom scroll component",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
-  "repository": "git@github.com:clustree/scroll.git",
+  "repository": "github:clustree/scroll",
   "author": "Clustree",
   "license": "MIT",
   "peerDependencies": {
@@ -13,8 +13,7 @@
   },
   "lint-staged": {
     "src/**": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "mangle": {
@@ -37,14 +36,14 @@
     "website:deploy": "gh-pages -d website/build"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",
-    "gh-pages": "^2.1.1",
-    "husky": "^3.0.3",
-    "lint-staged": "^9.2.1",
-    "microbundle": "^0.12.4",
+    "@types/react": "^17.0.2",
+    "gh-pages": "^3.1.0",
+    "husky": "^4.0.0",
+    "lint-staged": "^10.5.4",
+    "microbundle": "^0.13.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "sass": "^1.30.0"
+    "sass": "^1.32.8"
   },
   "dependencies": {},
   "sideEffects": false
