--- a/website/package.json
+++ b/website/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@clustree/scroll": "link:..",
-    "react": "^16.9.0",
+    "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "^3.4.1"
+    "react-dom": "^17.0.1",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,9 +33,6 @@
   },
   "resolutions": {
     "**/chokidar": "^3.3.1",
-    "**/micromatch": "^4.0.2",
-    "jest-haste-map": "25.1.0",
-    "mkdirp": "0.5.3",
-    "yargs-parser": "18.1.3"
+    "fork-ts-checker-webpack-plugin/micromatch": "^4.0.2"
   }
 }
